--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 	<!-- These meta tags are both essential! -->
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-	<title>Cedar Cafe</title><!-- Load custom css AFTER Bootstrap -->
+	<title>Cedar Cafe</title>
+	<!-- Load custom css AFTER Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
@@ -37,7 +38,8 @@
 				<p class="contact-info">123 Walker Street<br>
 				New York, New York 10013<br>
 				Phone: 212-555-5555<br>
-				Email: info@cedarcafe.com</p><!-- Button trigger modal -->
+				Email: info@cedarcafe.com</p>
+				<!-- Button trigger modal -->
 				 <button class="btn btn-dark d-flex justify-content-end" data-target="#exampleModal" data-toggle="modal" type="button">SEE HOURS</button> <!-- Modal -->
 				<div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="exampleModal" role="dialog" tabindex="-1">
 					<div class="modal-dialog" role="document">
@@ -65,13 +67,9 @@
 		</div>
 	</div><iframe allowfullscreen frameborder="0" height="450" src="https://maps.google.com/maps?ll=40.717318,-74.000041&output=embed&iwloc=near&z=13" style="border:0; filter:color()" width="100%"></iframe> <!-- Scripts should be loaded at the bottom of the body and must go in this order -->
 	 
-	<script src="js/jquery-3.2.1.min.js">
-	</script> 
-	<script src="js/popper.min.js">
-	</script> 
-	<script src="js/bootstrap.min.js">
-	</script> 
-	<script src="js/script.js">
-	</script>
+	<script src="js/jquery-3.2.1.min.js"></script> 
+	<script src="js/popper.min.js"></script> 
+	<script src="js/bootstrap.min.js"></script> 
+	<script src="js/script.js"></script>
 </body>
 </html>
